@@ -1,5 +1,8 @@
 package scenery
 
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+
 plugins {
     jacoco
 }
@@ -8,6 +11,21 @@ tasks {
 
     // https://docs.gradle.org/current/userguide/java_testing.html#test_filtering
     test {
+        if(JavaVersion.current() > JavaVersion.VERSION_11) {
+            allJvmArgs = allJvmArgs + listOf(
+                // kryo compatability
+                // from https://github.com/EsotericSoftware/kryo/blob/cb255af4f8df4f539778a325b8b4836d41f84de9/pom.xml#L435
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+                "--add-opens=java.base/java.net=ALL-UNNAMED",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                "--add-opens=java.base/java.time=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+                "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+            )
+        }
         // apparently `testLotsOfProteins` needs also a lot of heap..
         maxHeapSize = "8G"
         // [Debug] before running every test, prints out its name
@@ -17,9 +35,45 @@ tasks {
         if (!gpuPresent) {
             filter { excludeTestsMatching("ExampleRunner") }
         } else {
+            val testGroup = System.getProperty("scenery.ExampleRunner.TestGroup", "unittest")
+            val testConfig = System.getProperty("scenery.ExampleRunner.Configurations", "None")
+
+            configure<JacocoTaskExtension> {
+                setDestinationFile(file("$buildDir/jacoco/jacocoTest.$testGroup.$testConfig.exec"))
+                println("Destination file for jacoco is $destinationFile (test, $testGroup, $testConfig)")
+            }
+
+            filter { excludeTestsMatching("graphics.scenery.tests.unit.**") }
+
+            // this should circumvent Nvidia's Vulkan cleanup issue
+            maxParallelForks = 1
+            setForkEvery(1)
+            systemProperty("scenery.Workarounds.DontCloseVulkanInstances", "true")
+
+            testLogging {
+                exceptionFormat = TestExceptionFormat.FULL
+                events = mutableSetOf(TestLogEvent.PASSED,
+                    TestLogEvent.FAILED,
+                    TestLogEvent.SKIPPED,
+                    TestLogEvent.STARTED)
+                showStandardStreams = true
+            }
+
+            // we only want the Vulkan renderer here, and all screenshot to be stored in the screenshots/ dir
             systemProperty("scenery.Renderer", "VulkanRenderer")
             systemProperty("scenery.ExampleRunner.OutputDir", "screenshots")
+
+            val props = System.getProperties().filter { (k, _) -> k.toString().startsWith("scenery.") }
+
+            println("Adding properties ${props.size}/$props")
+            val additionalArgs = System.getenv("SCENERY_JVM_ARGS")
+            allJvmArgs = if (additionalArgs != null) {
+                allJvmArgs + props.flatMap { (k, v) -> listOf("-D$k=$v") } + additionalArgs
+            } else {
+                allJvmArgs + props.flatMap { (k, v) -> listOf("-D$k=$v") }
+            }
         }
+
         finalizedBy(jacocoTestReport) // report is always generated after tests run
     }
 
@@ -27,6 +81,32 @@ tasks {
         maxHeapSize = "8G"
         group = "verification"
         filter { includeTestsMatching("ExampleRunner") }
+
+        val testGroup = System.getProperty("scenery.ExampleRunner.TestGroup", "basic")
+        extensions.configure(JacocoTaskExtension::class) {
+            setDestinationFile(layout.buildDirectory.file("jacoco/jacocoTest.$testGroup.exec").get().asFile)
+        }
+    }
+
+    register("compileShader", JavaExec::class) {
+        group = "tools"
+        mainClass.set("graphics.scenery.backends.ShaderCompiler")
+        classpath = sourceSets["main"].runtimeClasspath
+
+    }
+
+    register("fullCodeCoverageReport", JacocoReport::class) {
+        executionData(fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec"))
+
+        sourceSets(sourceSets["main"], sourceSets["test"])
+
+        reports {
+            xml.required.set(true)
+            html.required.set(true)
+            csv.required.set(false)
+        }
+
+        dependsOn(test)
     }
 
     named<Jar>("jar") {
@@ -50,10 +130,9 @@ tasks {
 
     jacocoTestReport {
         reports {
-            xml.isEnabled = true
+            xml.required.set(true)
             html.apply {
-                isEnabled = false
-                //                destination = file("$buildDir/jacocoHtml")
+                required.set(false)
             }
         }
         dependsOn(test) // tests are required to run before generating the report
@@ -67,9 +146,9 @@ tasks {
             val exampleName = className.substringAfterLast(".")
             val exampleType = className.substringBeforeLast(".").substringAfterLast(".")
 
-            register<JavaExec>(name = className.substringAfterLast(".")) {
+            register<JavaExec>(name = exampleName) {
                 classpath = sourceSets.test.get().runtimeClasspath
-                main = className
+                mainClass.set(className)
                 group = "examples.$exampleType"
 
                 val props = System.getProperties().filter { (k, _) -> k.toString().startsWith("scenery.") }
@@ -80,6 +159,22 @@ tasks {
                 } else {
                     allJvmArgs + props.flatMap { (k, v) -> listOf("-D$k=$v") }
                 }
+
+                if(JavaVersion.current() > JavaVersion.VERSION_11) {
+                    allJvmArgs = allJvmArgs + listOf(
+                        // kryo compatability
+                        // from https://github.com/EsotericSoftware/kryo/blob/cb255af4f8df4f539778a325b8b4836d41f84de9/pom.xml#L435
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+                        "--add-opens=java.base/java.net=ALL-UNNAMED",
+                        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                        "--add-opens=java.base/java.time=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+                        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+                    )
+                }
             }
         }
 
@@ -88,7 +183,7 @@ tasks {
         if (project.hasProperty("example")) {
             project.property("example")?.let { example ->
                 val file = sourceSets.test.get().allSource.files.first { "class $example" in it.readText() }
-                main = file.path.substringAfter("kotlin${File.separatorChar}").replace(File.separatorChar, '.').substringBefore(".kt")
+                mainClass.set(file.path.substringAfter("kotlin${File.separatorChar}").replace(File.separatorChar, '.').substringBefore(".kt"))
                 val props = System.getProperties().filter { (k, _) -> k.toString().startsWith("scenery.") }
 
                 val additionalArgs = System.getenv("SCENERY_JVM_ARGS")
@@ -98,7 +193,23 @@ tasks {
                     allJvmArgs + props.flatMap { (k, v) -> listOf("-D$k=$v") }
                 }
 
-                println("Will run example $example with classpath $classpath, main=$main")
+                if(JavaVersion.current() > JavaVersion.VERSION_11) {
+                    allJvmArgs = allJvmArgs + listOf(
+                        // kryo compatability
+                        // from https://github.com/EsotericSoftware/kryo/blob/cb255af4f8df4f539778a325b8b4836d41f84de9/pom.xml#L435
+                        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+                        "--add-opens=java.base/java.net=ALL-UNNAMED",
+                        "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                        "--add-opens=java.base/java.time=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util=ALL-UNNAMED",
+                        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+                        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+                        "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED"
+                    )
+                }
+
+                println("Will run example $example with classpath $classpath, main=${mainClass.get()}")
                 println("JVM arguments passed to example: $allJvmArgs")
             }
         }
